# WebGPU-distribution

./: .gitignore  CMakeLists.txt  LICENSE.txt  Note.txt  README.md  commit-sha  conanfile.py  dawn-git-tag.txt  emscripten-git-tag.txt  webgpu.cmake  wgpu-native-git-tag.txt
.github/example/: CMakeLists.txt  main.cpp
.github/workflows/: cmake.yml
cmake/: FetchDawn.cmake  FetchWgpuNative.cmake  apply_patch_idempotent.cmake  utils.cmake
dawn/: CMakeLists.txt  FetchDawnPrecompiled.cmake  FetchDawnSource.cmake
dawn/include/webgpu/: webgpu.hpp
dawn/patch/: dawn.patch
emdawnwebgpu/: CMakeLists.txt  emdawnwebgpu-git-tag.txt
emdawnwebgpu/include/webgpu/: webgpu.hpp
emscripten/: CMakeLists.txt
emscripten/include-emdawnwebgpu/webgpu/: webgpu.hpp
emscripten/ports/: emdawnwebgpu.py
include-emscripten/webgpu/: webgpu.hpp
include/webgpu/: webgpu.hpp  wgpu.h
patch/: dawn.patch
patch/tools/: fetch_dawn_dependencies.py
tools/: fetch_dawn_dependencies.py
wgpu-native/: CMakeLists.txt  FetchWgpuNativePrecompiled.cmake
wgpu-native/include/webgpu/: webgpu.hpp
